Minor styling changes to disable horizontal scrolling and fix slide animations

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,5 +1,14 @@
-h1 {
-  color: blue;
+body, html {
+  height: 100%;
+}
+
+div.wrap {
+  height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .charity-list {
